--- a/noten-lernen/index.css
+++ b/noten-lernen/index.css
@@ -1,3 +1,7 @@
-#logo {
-    scale: 10%;
+.transparent {
+    height: 100px;
+    width: 100px;
+    border-radius: 5px;
+    background-color: black;
+    opacity: 0.5;
 }
