--- a/noten-lernen/index.css
+++ b/noten-lernen/index.css
@@ -1,7 +1,8 @@
 .transparent {
-    height: 100px;
-    width: 100px;
+    height: 1000px;
+    width: 1000px;
     border-radius: 5px;
     background-color: black;
     opacity: 0.5;
+    margin: 50px;
 }
